feat(Internal HTTP API): #3575144 Add unstable (v0) external Canvas Page API endpoints
By: penyaskito
By: mglaman
By: wim leers
By: longwave
By: wotnak
By: effulgentsia
By: lauriii
By: balintbrews
